@@ -1,0 +1,14 @@
+// This file may be redistributed and modified only under the terms of
+// the GNU Lesser General Public License (See COPYING for details).
+// Copyright (C) 2001 Stefanus Du Toit
+
+#include <iostream>
+
+#include "Codec.h"
+#include "Codec_impl.h"
+
+namespace Atlas {
+  
+template class Codec<std::iostream>;
+
+}
