@@ -5,8 +5,8 @@ lib_LTLIBRARIES = libAtlas.la
 libAtlasincludedir = $(includedir)/Atlas
 
 libAtlas_la_SOURCES = \
-	Bridge.cc
+	Bridge.cc Codec.cc
 
 libAtlasinclude_HEADERS = \
 	Factory.h Bridge.h Codec.h Negotiate.h EncoderBase.h \
-	Task.h
+	Task.h Codec_impl.h
